# not-decky-store

./: .gitignore  Cargo.toml  Dockerfile  README.md  create_docker_img.sh  entrypoint.sh  run_docker_img.sh
decky_api/: Cargo.toml
decky_api/src/: lib.rs  store_plugin.rs
src/: cli.rs  consts.rs  main.rs
src/not_decky/: artifact.rs  image.rs  index.rs  mod.rs  plugins.rs  stats.rs
src/storage/: cache.rs  filesystem.rs  interface.rs  merge.rs  mod.rs  proxy.rs
