[package]
name = "not-decky-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decky_api = { version = "0.1.0", path = "./decky_api" }

# web framework
actix-web = "4.2"
actix-cors = "0.6"

[workspace]
include = [
    "decky_api"
]
