[package]
name = "not-decky-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decky_api = { version = "0.1.0", path = "./decky_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bytes = "1.3"
sha256 = "1.1"

# logging
log = "0.4"
simplelog = "0.12"

# web framework
actix-web = { version = "4.2", default-features = false, features = [ "macros", "compress-brotli", "compress-zstd" ] }
actix-cors = "0.6"

# proxy storage impl
ureq = { version = "2.7", default-features = false, features = ["json", "native-tls", "brotli", "gzip"] }
native-tls = "0.2" # ring only compiles on x86 and arm for some dumb reason, so use this instead

# cache storage impl
chrono = { version = "0.4" }

# cli
clap = { version = "4.0", features = ["derive"] }

[workspace]
include = [
    "decky_api"
]
